# UR10_UGF25_project

./: .dockerignore  .gitignore  Dockerfile  GRIPPER_SETUP.md  README.md  colmap.md  cv_fundamentals.py  cv_scripts.py  docker-compose.yml  kinect_scripts.py  requirements.txt  ur10_control.py  ur10_socket.py
Python_code/Remote_Examples/: Dashboard.py  control_loop_connector.py
UR_Examples/Python_code/Remote_Examples/: Dashboard.py  connector.py
examples/nerf_examples/: README.md  basic_nerf_workflow.py  robot_nerf_capture.py  train_nerf_workflow.py
ros2_ws/src/ur10_control/: CMakeLists.txt  package.xml
ros2_ws/src/ur10_control/config/: controllers.yaml  joint_limits.yaml  ur10_moveit.rviz
ros2_ws/src/ur10_control/launch/: ur10_moveit_demo.launch.py
ros2_ws/src/ur10_control/scripts/: motion_planning_example.py  moveit_planning_demo.py  trajectory_execution_demo.py
src/perception/: azure_kinect.py  cv_basics.py  cv_scripts.py  geometry_3d.py  kinect_scripts.py  nerf_studio.py  rgb_to_pointcloud.py
src/robot_control/: Logan_Control_Test.py  grippy.txt  ur10_control.py  ur10_socket.py
