<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur10_control</name>
  <version>1.0.0</version>
  <description>UR10e robot control package with MoveIt2 integration for motion planning and execution</description>

  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>

  <!-- MoveIt2 dependencies for motion planning -->
  <!-- They can also explore trajopt or OMPL for advanced planning algorithms -->
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_simple_controller_manager</depend>
  <depend>moveit_configs_utils</depend>

  <!-- UR robot driver dependencies -->
  <depend>ur_robot_driver</depend>
  <depend>ur_msgs</depend>
  <depend>ur_description</depend>
  <depend>ur_moveit_config</depend>

  <!-- Transform and joint state dependencies -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>

  <!-- Action and service dependencies -->
  <depend>action_msgs</depend>
  <depend>action_tutorials_interfaces</depend>

  <!-- Launch file dependencies -->
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>